--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "@material-ui/core": "^3.4.0",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.23",
-    "gh-pages": "^2.0.1",
     "numeral": "^2.0.6",
     "query-string": "^6.2.0",
     "react": "^16.6.0",
@@ -15,16 +14,12 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-swipeable-views": "^0.13.0",
-    "react-swipeable-views-utils": "^0.13.0",
-    "recharts": "^1.3.5"
+    "react-swipeable-views-utils": "^0.13.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "test": "react-scripts test"
   },
   "eslintConfig": {
     "extends": "react-app"
