--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "material-sense",
-  "version": "0.1.0",
-  "private": true,
+  "name": "ui.webhook.yunplus.io",
+  "version": "0.1.1",
   "dependencies": {
     "@material-ui/core": "^3.4.0",
     "@material-ui/icons": "^3.0.1",
     "@material-ui/lab": "^3.0.0-alpha.23",
+    "@sweetalert/with-react": "^0.1.1",
+    "fpmc-jssdk": "^1.0.7",
+    "lodash": "^4.17.11",
     "numeral": "^2.0.6",
     "query-string": "^6.2.0",
     "react": "^16.6.0",
@@ -13,7 +15,8 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
     "react-swipeable-views": "^0.13.0",
-    "react-swipeable-views-utils": "^0.13.0"
+    "react-swipeable-views-utils": "^0.13.0",
+    "sweetalert": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,11 +31,5 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ],
-  "devDependencies": {
-    "@sweetalert/with-react": "^0.1.1",
-    "fpmc-jssdk": "^1.0.7",
-    "lodash": "^4.17.11",
-    "sweetalert": "^2.1.2"
-  }
+  ]
 }
